--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: T-Ray: An Extensible Bug Detection Tool Targeting ARM TrustZone Applications
-description: 
+description: ""
