--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-cayman
-title: T-Ray: An Extensible Bug Detection Tool Targeting ARM TrustZone Applications
+title: "T-Ray: An Extensible Bug Detection Tool Targeting ARM TrustZone Applications"
